@@ -1,9 +1,21 @@
 # README File For ICP Java Project 1
 This java project records occurrences of galamsey from Observatories all over Africa and stores the data in a databse system.
+
 ## Instructions On How To Run The Program
-To run the program you will have to run the MonitoringI_O class
+-To run the program you will have to run the MonitoringI_O class
+
 ### What To Install
 -Javafx jdk
 -Java mysql connector
-##### Authors
+
+#### Instructions For Running the Program In IntelliJ
+- Place the JavaFX jdk in the Java virtual machines folder
+- Click the drop down beside the play button in IntelliJ
+- Select "edit configuration"
+- Add the following to your VM options:
+--module-path
+“Path to the lib folder in the Virtual Machines Folder that you moved it to"
+--add-modules=javafx.controls,javafx.fxml
+
+###### Authors
 Andrew Duncan, Caleb Otchi, Nana Osei Somuah and Stephen Torku.
